I think all is done for now

--- a/src/main/resources/assets/baersadditions/lang/en_us.json
+++ b/src/main/resources/assets/baersadditions/lang/en_us.json
@@ -21,8 +21,8 @@
   "block.baersadditions.deepslate_platinum_ore": "Deepslate Platinum Ore",
   "block.baersadditions.lavender": "Lavender",
 
-  "item.baersadditions.rainbow_road": "Rainbow Road",
-  "item.baersadditions.rainbow-road.desc":"Antibang - Rainbow Road",
+  "item.baersadditions.rainbow_road": "§4A§cn§6t§ei§ab§2a§1n§9g §d- §4R§ca§6i§en§ab§2o§1w §bR§do§5a§4d",
+  "item.baersadditions.rainbow_road.desc": "§6§lAntibang - Rainbow Road Unmastered",
 
   "tooltip.baersadditions.vial_bottle.tooltip": "§oJust an empty vile",
   "tooltip.baersadditions.experience_bottle.tooltip": "§oExperience concentrate is a concentrated form of experience that cannot be made, but only found. Currently, the only known location are strongholds and plaque asylums.",
