Redid hitboxes for plushies

--- a/src/main/resources/assets/baersadditions/lang/en_us.json
+++ b/src/main/resources/assets/baersadditions/lang/en_us.json
@@ -43,8 +43,8 @@
   "block.baersadditions.plushie_chicken": "Chicken Plushie",
   "block.baersadditions.plushie_cow": "Cow Plushie",
   "block.baersadditions.plushie_fox": "Fox Plushie",
-  "block.baersadditions.plushie_Parrot": "Parrot Plushie",
-  "block.baersadditions.plushie_Pig": "Pig Plushie",
+  "block.baersadditions.plushie_parrot": "Parrot Plushie",
+  "block.baersadditions.plushie_pig": "Pig Plushie",
   "block.baersadditions.plushie_sheep": "Sheep Plushie",
   "block.baersadditions.plushie_turtle": "Axolotl Turtle"
 }
