Added sound when right clicked to plushies

--- a/src/main/resources/assets/baersadditions/lang/en_us.json
+++ b/src/main/resources/assets/baersadditions/lang/en_us.json
@@ -40,11 +40,31 @@
   "block.baersadditions.plushie_allay": "Allay Plushie",
   "block.baersadditions.plushie_axolotl": "Axolotl Plushie",
   "block.baersadditions.plushie_bee": "Bee Plushie",
+  "block.baersadditions.plushie_camel": "Camel Plushie",
+  "block.baersadditions.plushie_cat": "Cat Plushie",
   "block.baersadditions.plushie_chicken": "Chicken Plushie",
   "block.baersadditions.plushie_cow": "Cow Plushie",
+  "block.baersadditions.plushie_creeper": "Creeper Plushie",
+  "block.baersadditions.plushie_dolphin": "Dolphin Plushie",
+  "block.baersadditions.plushie_donkey": "Donkey Plushie",
+  "block.baersadditions.plushie_enderdragon": "Enderdragon Plushie",
+  "block.baersadditions.plushie_enderman": "Enderman Plushie",
   "block.baersadditions.plushie_fox": "Fox Plushie",
+  "block.baersadditions.plushie_frog": "Frog Plushie",
+  "block.baersadditions.plushie_ghast": "Ghast Plushie",
+  "block.baersadditions.plushie_goat": "Goat Plushie",
+  "block.baersadditions.plushie_horse": "Horse Plushie",
+  "block.baersadditions.plushie_mooshroom": "Mooshroom Plushie",
+  "block.baersadditions.plushie_panda": "Panda Plushie",
   "block.baersadditions.plushie_parrot": "Parrot Plushie",
   "block.baersadditions.plushie_pig": "Pig Plushie",
+  "block.baersadditions.plushie_polar_bear": "Polar Bear Plushie",
+  "block.baersadditions.plushie_pufferfish": "Pufferfish Plushie",
+  "block.baersadditions.plushie_rabbit": "Rabbit Plushie",
   "block.baersadditions.plushie_sheep": "Sheep Plushie",
-  "block.baersadditions.plushie_turtle": "Axolotl Turtle"
+  "block.baersadditions.plushie_skeleton_horse": "Skeleton Horse Plushie",
+  "block.baersadditions.plushie_sniffer": "Sniffer Plushie",
+  "block.baersadditions.plushie_squid": "Squid Plushie",
+  "block.baersadditions.plushie_turtle": "Turtle Plushie",
+  "block.baersadditions.plushie_wolf": "Wolf Plushie"
 }
