--- a/src/main/resources/assets/baersadditions/lang/en_us.json
+++ b/src/main/resources/assets/baersadditions/lang/en_us.json
@@ -7,6 +7,7 @@
   "item.baersadditions.peoples_republic_tome": "People's Republic Tome",
   "item.baersadditions.blood_concentrate": "Blood Concentrate",
   "item.baersadditions.trash_panda_craft_tome": "Trash Panda Craft Tome",
+  "item.baersadditions.pokeasub_tome": "PokeASub Tome",
   "item.baersadditions.death_concentrate": "Death Concentrate",
   "item.baersadditions.fire_concentrate": "Fire Concentrate",
   "item.baersadditions.overworld_concentrate": "Overworld Concentrate",
